--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-/*
-    Mandelbrot Experiment
+/* 
 
-    Created By: Anderson Bucchianico
-          Date: 30/dec/2020
-          Type: Experimental Software
+    Mandelbrot Experiment
+    Created by Anderson Bucchianico @ 2020 - 2022.
+    Licensed by General Public License v3
+
+    See https://www.gnu.org/licenses/gpl-3.0.en.html for more details.
+    Thank you.
+
 */
 
 * {
@@ -12,14 +15,14 @@
     border: none;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #333;
+    color: var(--fontColor);
     font-weight: lighter;
 }
 
 :root {
-    --fontColor: #333;
+    --fontColor: rgb(255, 255, 255);
     --primaryBackground: rgb(255, 255, 255);
-    --SencondaryBackground: #fff;
+    --secondaryBackground: #53565a;
     --primaryShadow: #ddd;
     --secondaryShadow: #f5f5f5;
 }
@@ -33,10 +36,11 @@ body {
     margin: auto;
     display: flex;
     height: inherit;
+    background-color: var(--secondaryBackground);
 }
 
 .default-border {
-    border: solid 1px #ddd;
+    border: solid 1px #373b3d;
     border-radius: 3px;
     padding: 5px;
 }
@@ -50,49 +54,35 @@ body {
 }
 
 .default-input {
-    min-width: 75px;
-    box-shadow: none
+    min-width: 118px;
+    height: 26px;
+    box-shadow: none;
+    border: none;
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: var(--secondaryBackground);
+}
+
+.default-input[type='checkbox'] {
+    height: 16px;
 }
 
 .default-button {
-    background-image: linear-gradient(rgb(255, 255, 255),rgb(231, 231, 231));
+    background-image: linear-gradient(rgb(83 87 90),rgb(37 39 41));
+    outline: none;
     cursor: pointer;
+}
+.default-button::after {
+    content: 'Start!';
 }
 .default-button:active {
-    background-image: linear-gradient(rgb(231, 231, 231),rgb(255, 255, 255));
+    background-image: linear-gradient(rgb(37 39 41),rgb(83 87 90));
     cursor: pointer;
-    color: #555;
 }
 
-
-
-/* Console ==================================================== */
-
-comp-console {
-    position: absolute;
-    min-width: 512px;
-    height: 256px;
-    display: none;
-    left: 120px;
-    bottom: 0;
+.default-button:active::after {
+    content: 'Plase Wait...'
 }
-section.console-header {
-    background-image: linear-gradient(180deg, #fff, #f4f4f4);
-    border: 2px solid #eee;
-    border-radius: 5px 5px 0px 0px;
-    padding: 5px;
-    display: flex;
-    justify-content: space-between;
-}
-article.output-console {
-    border-radius: 0px 0px 5px 5px;
-    font-family: monospace;
-    overflow: hidden scroll;
-    height: 200px;
-    background-color: white;
-}
-
-
 
 /* Canvas ===================================================== */
 
@@ -103,22 +93,29 @@ comp-canvascontainer > canvas {
     padding:0;
 }
 
-
-
 /* Control Panel ============================================== */
 
 section.control-panel {
     padding: 10px;
-    background-image: linear-gradient(180deg, #fff, #f4f4f4);
-    display: block;
+    background-color: #35363A;
+    display: flex;
+    flex-wrap: wrap;
     width: 128px;
+    height: fit-content;
+    row-gap: 20px;
+    box-shadow: 3px 3px 12px black;
+    margin: 10px 0px 0px 10px;
 }
 section.control-panel > div {
-    margin-top: 15px;
+    height: 46px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 section.control-panel > div > input {
     width: -webkit-fill-available;
 }
 section.control-panel > div > button {
     width: 100%;
+    border-radius: 5px;
 }
